@@ -87,10 +87,5 @@ Modifications to original file pref-directory-add.xul by:
 -->
 <!ENTITY newDirectoryWidth                 "36em">
 
-<!ENTITY DisplaySyncCompleted.label      "Afficher l'avis de synchronisation">
-<!ENTITY DisplaySyncCompleted.accesskey  "Z">
-<!ENTITY AutoDeleteFromServer.label       "Effacer les cartes qui ont été effacées du serveur automatiquement">
-<!ENTITY AutoDeleteFromServer.accesskey   "E">
-
 <!ENTITY ReadOnly.label                   "En lecture seulement">
 <!ENTITY ReadOnly.accesskey               "L">
