@@ -1,6 +1,8 @@
 2009-06-30  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
-	*
+	*chrome/content/sogo-connector/addressbook/preferences.addressbook.groupdav.js:
+	removed "display synchronization dialog" from groupdav addressbook
+	settings window.
 	chrome/content/sogo-connector/general/sync.addressbook.groupdav.js:
 	fixed a bug where list downloads would tranmis the tag
 	"vcard-download" instead of "list-download", preventing the
